syntax = "proto3";

package fileservice.v1;
option go_package = "./proto";

import "google/protobuf/timestamp.proto";

message FileInfo {
  string id = 1;
  string name = 2;
  int64 size = 3;
  string content_type = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  map<string, string> metadata = 7;
}

message FileChunk {
  bytes data = 1;
  int64 offset = 2;
  bool is_last = 3;
}
